--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,3 +23,10 @@ jobs:
       run: docker build -t bhargavreddy17/rgt-omni:testnodejs .
     - name: Push image to Docker Hub
       run: docker push bhargavreddy17/rgt-omni:testnodejs
+    - name: Trigger deployment repo workflow
+      uses: peter-evans/repository-dispatch@v2
+      with:
+        token: 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
+        repository: bhargavreddy17/mycoookbooks
+        event-type: trigger-deployment
+        client-payload: '{"image_tag": "testnodejs"}'
