--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Trigger deployment repo workflow
       uses: peter-evans/repository-dispatch@v2
       with:
-        token: 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
+        token: ${{secrets.PERSONAL_GITHUB_TOKEN}}
         repository: bhargavreddy17/mycoookbooks
         event-type: trigger-deployment
