--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Trigger deployment repo workflow
       uses: peter-evans/repository-dispatch@v2
       with:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+        token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
         repository: bhargavreddy17/mycoookbooks
         event-type: trigger-deployment
+        client-payload: '{"image_tag": "testnodejs"}'
