--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Trigger deployment repo workflow
       uses: peter-evans/repository-dispatch@v2
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         repository: bhargavreddy17/mycoookbooks
         event-type: trigger-deployment
         client-payload: '{"image_tag": "testnodejs"}'
