--- a/.github/workflows/githubaction_graph.yml
+++ b/.github/workflows/githubaction_graph.yml
@@ -1,10 +1,3 @@
-name: Generate Workflow Graph
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   visualize:
     runs-on: ubuntu-latest
@@ -17,7 +10,10 @@ jobs:
 
       # Generate Workflow Graph
       - name: Generate Graph
-        run: dot -Tpng .github/workflows/*.yaml -o workflow_graph.png
+        run: |
+          ls -la .github/workflows  # List files in workflows directory
+          dot -Tpng .github/workflows/*.yaml -o workflow_graph.png
+        working-directory: ${{ github.workspace }}
 
       # Upload artifact
       - name: Upload artifact
